--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node src/index.js",
+    "start": "tsc && node ./dist/index.js",
+    "dev": "ts-node-dev ./src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -12,6 +13,13 @@
   "license": "ISC",
   "dependencies": {
     "apollo-server": "^3.0.1",
+    "express": "^4.17.1",
     "graphql": "^15.5.1"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.13",
+    "@types/node": "^10.17.60",
+    "ts-node-dev": "^1.1.8",
+    "typescript": "^4.3.5"
   }
 }
