--- a/package.json
+++ b/package.json
@@ -8,20 +8,33 @@
   "main": "src/index.ts",
   "scripts": {
     "start": "tsc && node ./dist/index.js",
-    "dev": "ts-node-dev ./src/index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "ts-node-dev -r dotenv/config --transpile-only --no-notify ./src/index.ts dotenv_config_path=./.env.development ",
+    "docker:up": "docker-compose up -d",
+    "docker:down": "docker compose down",
+    "test": "DATABASE_URL=postgresql://dan:nutriplan@localhost:5433/tests npm run docker:up && jest",
+    "build": "tsc"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^2.27.0",
     "apollo-server": "^3.0.1",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "graphql": "^15.5.1"
+    "graphql": "^15.5.1",
+    "nexus": "^1.1.0",
+    "pg": "^8.6.0",
+    "prisma": "^2.27.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/jest": "^26.0.24",
     "@types/node": "^10.17.60",
+    "get-port": "^5.1.1",
+    "graphql-request": "^3.4.0",
+    "jest": "^27.0.6",
+    "ts-jest": "^27.0.3",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.3.5"
   }
