--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "engines": {
     "node": "16.x"
   },
+  "type": "module",
   "main": "src/index.ts",
   "scripts": {
     "start": "tsc && node ./dist/src/config/index.js",
@@ -12,6 +13,7 @@
     "docker:up": "docker-compose up -d",
     "docker:down": "docker compose down",
     "test": "DATABASE_URL=postgresql://dan:nutriplan@localhost:5433/tests npm run docker:up && jest",
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "build": "tsc"
   },
   "keywords": [],
@@ -31,6 +33,14 @@
     "@types/express": "^4.17.13",
     "@types/jest": "^26.0.24",
     "@types/node": "^10.17.60",
+    "@typescript-eslint/eslint-plugin": "^4.28.5",
+    "@typescript-eslint/parser": "^4.28.5",
+    "eslint": "^7.31.0",
+    "eslint-config-airbnb-typescript": "^12.3.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-jest": "^24.4.0",
+    "eslint-plugin-node": "^11.1.0",
     "get-port": "^5.1.1",
     "graphql-request": "^3.4.0",
     "jest": "^27.0.6",
