--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "engines": {
     "node": "16.x"
   },
-  "type": "module",
   "main": "src/index.ts",
   "scripts": {
     "start": "tsc && node ./dist/src/config/index.js",
@@ -14,20 +13,21 @@
     "docker:down": "docker compose down",
     "test": "DATABASE_URL=postgresql://dan:nutriplan@localhost:5433/tests npm run docker:up && jest",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx,cjs",
-    "build": "tsc"
+    "build": "tsc",
+    "script": "ts-node -r dotenv/config --transpile-only dotenv_config_path=./.env.development "
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@elastic/app-search-node": "^7.14.0",
     "@prisma/client": "^2.27.0",
     "apollo-server": "^3.0.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "graphql": "^15.5.1",
     "nexus": "^1.1.0",
-    "pg": "^8.6.0",
-    "prisma": "^2.27.0"
+    "pg": "^8.6.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
@@ -35,6 +35,7 @@
     "@types/node": "^10.17.60",
     "@typescript-eslint/eslint-plugin": "^4.28.5",
     "@typescript-eslint/parser": "^4.28.5",
+    "csv-parse": "^4.16.0",
     "eslint": "^7.31.0",
     "eslint-config-airbnb-typescript": "^12.3.1",
     "eslint-config-prettier": "^8.3.0",
@@ -44,6 +45,7 @@
     "get-port": "^5.1.1",
     "graphql-request": "^3.4.0",
     "jest": "^27.0.6",
+    "prisma": "^2.27.0",
     "ts-jest": "^27.0.3",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.3.5"
