--- a/package.json
+++ b/package.json
@@ -26,12 +26,15 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "graphql": "^15.5.1",
+    "lodash": "^4.17.21",
+    "natural": "^5.0.4",
     "nexus": "^1.1.0",
     "pg": "^8.6.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/jest": "^26.0.24",
+    "@types/natural": "^2.1.2",
     "@types/node": "^10.17.60",
     "@typescript-eslint/eslint-plugin": "^4.28.5",
     "@typescript-eslint/parser": "^4.28.5",
