--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/jest": "^26.0.24",
+    "@types/lodash": "^4.14.172",
     "@types/natural": "^2.1.2",
     "@types/node": "^10.17.60",
     "@typescript-eslint/eslint-plugin": "^4.28.5",
