--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "@elastic/app-search-node": "^7.14.0",
     "@prisma/client": "^2.27.0",
     "apollo-server": "^3.0.1",
+    "csv-parse": "^4.16.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "graphql": "^15.5.1",
     "lodash": "^4.17.21",
     "natural": "^5.0.4",
     "nexus": "^1.1.0",
+    "p-queue": "^6.6.2",
     "pg": "^8.6.0"
   },
   "devDependencies": {
@@ -39,7 +41,6 @@
     "@types/node": "^10.17.60",
     "@typescript-eslint/eslint-plugin": "^4.28.5",
     "@typescript-eslint/parser": "^4.28.5",
-    "csv-parse": "^4.16.0",
     "eslint": "^7.31.0",
     "eslint-config-airbnb-typescript": "^12.3.1",
     "eslint-config-prettier": "^8.3.0",
