--- a/package.json
+++ b/package.json
@@ -23,10 +23,14 @@
     "@elastic/app-search-node": "^7.14.0",
     "@prisma/client": "^2.27.0",
     "apollo-server": "^3.0.1",
+    "apollo-server-core": "^3.0.1",
+    "apollo-server-express": "^3.0.1",
     "csv-parse": "^4.16.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "graphql": "^15.5.1",
+    "jsonwebtoken": "^8.5.1",
+    "jwks-rsa": "^2.0.4",
     "lodash": "^4.17.21",
     "natural": "^5.0.4",
     "nexus": "^1.1.0",
@@ -36,6 +40,7 @@
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/jest": "^26.0.24",
+    "@types/jsonwebtoken": "^8.5.5",
     "@types/lodash": "^4.14.172",
     "@types/natural": "^2.1.2",
     "@types/node": "^10.17.60",
