--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "license": "ISC",
   "dependencies": {
     "@elastic/app-search-node": "^7.14.0",
-    "@prisma/client": "^2.27.0",
+    "@prisma/client": "^3.0.2",
     "apollo-server": "^3.0.1",
     "apollo-server-core": "^3.0.1",
     "apollo-server-express": "^3.0.1",
@@ -30,6 +30,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "graphql": "^15.5.1",
+    "graphql-scalars": "^1.10.1",
     "jsonwebtoken": "^8.5.1",
     "jwks-rsa": "^2.0.4",
     "lodash": "^4.17.21",
@@ -56,7 +57,7 @@
     "get-port": "^5.1.1",
     "graphql-request": "^3.4.0",
     "jest": "^27.0.6",
-    "prisma": "^2.27.0",
+    "prisma": "^3.0.2",
     "ts-jest": "^27.0.3",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.3.5"
