--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "apollo-server": "^3.0.1",
     "apollo-server-core": "^3.0.1",
     "apollo-server-express": "^3.0.1",
+    "apollo-server-types": "^3.0.1",
     "csv-parse": "^4.16.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
@@ -41,6 +42,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/faker": "^5.5.8",
     "@types/jest": "^26.0.24",
     "@types/jsonwebtoken": "^8.5.5",
     "@types/lodash": "^4.14.172",
@@ -54,9 +56,11 @@
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-jest": "^24.4.0",
     "eslint-plugin-node": "^11.1.0",
+    "faker": "^5.5.3",
     "get-port": "^5.1.1",
     "graphql-request": "^3.4.0",
     "jest": "^27.0.6",
+    "jest-extended": "^0.11.5",
     "prisma": "^3.0.2",
     "ts-jest": "^27.0.3",
     "ts-node-dev": "^1.1.8",
