--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
     "@prisma/client": "^3.0.2",
     "apollo-server": "^3.0.1",
     "apollo-server-core": "^3.0.1",
+    "apollo-server-errors": "^3.0.1",
     "apollo-server-express": "^3.0.1",
     "apollo-server-types": "^3.0.1",
     "csv-parse": "^4.16.0",
+    "date-fns": "^2.24.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "graphql": "^15.5.1",
