--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   "license": "ISC",
   "dependencies": {
     "@elastic/app-search-node": "^7.14.0",
-    "@prisma/client": "^3.0.2",
+    "@prisma/client": "^3.5.0",
     "apollo-server": "^3.0.1",
     "apollo-server-core": "^3.0.1",
     "apollo-server-errors": "^3.0.1",
@@ -66,7 +66,8 @@
     "graphql-request": "^3.4.0",
     "jest": "^27.0.6",
     "jest-extended": "^0.11.5",
-    "prisma": "^3.0.2",
+    "prettier-plugin-prisma": "^3.4.1",
+    "prisma": "^3.5.0",
     "ts-jest": "^27.0.3",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.3.5"
