--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "apollo-server-errors": "^3.0.1",
     "apollo-server-express": "^3.0.1",
     "apollo-server-types": "^3.0.1",
+    "chalk": "^4.1.1",
     "csv-parse": "^4.16.0",
+    "dataloader": "^2.0.0",
     "date-fns": "^2.24.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
@@ -42,8 +44,10 @@
     "lodash": "^4.17.21",
     "natural": "^5.0.4",
     "nexus": "^1.1.0",
+    "object-hash": "^2.2.0",
     "p-queue": "^6.6.2",
-    "pg": "^8.6.0"
+    "pg": "^8.6.0",
+    "sql-formatter": "^4.0.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
@@ -53,6 +57,7 @@
     "@types/lodash": "^4.14.172",
     "@types/natural": "^2.1.2",
     "@types/node": "^10.17.60",
+    "@types/object-hash": "^2.2.1",
     "@typescript-eslint/eslint-plugin": "^4.28.5",
     "@typescript-eslint/parser": "^4.28.5",
     "eslint": "^7.31.0",
